# dich

./: CMakeLists.txt  README.md  package.xml
config/: online.rviz
include/dich/: correspondences.h  difference_filter.h  difference_image.h  difference_pairing.h  difference_shift.h  io.h  replayer.h  settings.h  steerer.h  teacher.h  working_memory.h
launch/: ground_truth.launch  replay.launch  replay_offline.launch  teach.launch
msg/: Match.msg
scripts/: extract_odometry.sh  plot_J.py  plot_odometry.py  plot_shifts_J.py  plot_similarities_J.py  steerings.py
src/dich/: correspondences.cpp  difference_filter.cpp  difference_image.cpp  difference_pairing.cpp  difference_shift.cpp  ground_truth.cpp  io.cpp  replay.cpp  replayer.cpp  settings.cpp  steerer.cpp  steering.cpp  steering_offline.cpp  teach.cpp  teacher.cpp
